# inequality

./: .env  .env.example  .gitignore  README-LOCAL-DEV.md  README.md  package.json
apps/api-python/: pyproject.toml  wrangler.toml
apps/api-python/d1/: schema.sql
apps/api-python/src/: worker.py
apps/db-proxy/: package.json  tsconfig.json  wrangler.toml
apps/db-proxy/src/: index.ts
apps/fe/: .env  app.vue  nuxt.config.ts  package.json  tailwind.config.js
apps/fe/.nuxt/: components.d.ts  icon-collections.mjs  imports.d.ts  nitro.json  nuxt.d.ts  nuxt.json  tsconfig.json  tsconfig.server.json
apps/fe/.nuxt/dev/: index.mjs  index.mjs.map
apps/fe/.nuxt/manifest/: latest.json
apps/fe/.nuxt/tailwind/: postcss.mjs
apps/fe/.nuxt/types/: build.d.ts  imports.d.ts  nitro-imports.d.ts  nitro-routes.d.ts  plugins.d.ts  schema.d.ts
apps/fe/assets/css/: cookiecontrol.css  main.css  tailwind.css  typography.css
apps/fe/components/: StatsCard.vue
apps/fe/components/charts/: VegaLite.vue  VegaLiteEmbed.vue
apps/fe/components/stats/: FiltersBar.vue  FiltersDrawer.vue  GlossaryModal.vue  MetricCard.vue  OutcomeCard.vue  PersonalEffectsCard.vue  Playground.vue  StatTile.vue  StatsCard.vue  StatsPrimaryControls.vue
apps/fe/composables/: useApi.ts  useInequalityData.ts  useStatsState.ts
apps/fe/layouts/: default.vue
apps/fe/locales/: de.json  en.json
apps/fe/pages/: datenschutz.vue  demo-sim.vue  explore.vue  impressum.vue  index.vue  profile.vue  stats.vue  wealth-distribution.vue
apps/fe/public/data/: mock.json  (+2 more)
inequality-edge/apps/db-proxy/: package.json
(+44 files in other folders)
