[project]
name = "ineq-api-python"
version = "0.1.0"
description = "FastAPI Python Worker for inequality app (dev/experimental)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
]

[dependency-groups]
dev = ["workers-py"]

# Use `uv` + `pywrangler`:
#  uv run pywrangler dev
#  uv run pywrangler deploy
